<resources>
    <string name="app_name">Android Venteliste</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opdater</string>
    <string name="navigation_view_item_1">Hjem</string>
    <string name="navigation_view_item_2">Triangering Info</string>
    <string name="navigation_view_item_3">Demo - 1 min</string>
    <string name="navigation_view_item_4">Demo - 2 min</string>
    <string name="navigation_view_item_5">Stop Demo</string>
    <string name="navigation_view_item_6">Hjælp</string>
    <string name="navigation_view_category_1">Android Venteliste Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
